--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGO_URL = mongodb+srv://anirudhkailkhura:dhaarmik-app@flutter-app.mp3vjoc.mongodb.net/dhaarmik
+SECRET= dhaarmik2023
+JWT_SEC = dhaarmik2023
